--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mongoose": "^8.18.2",
     "next": "15.5.3",
     "puppeteer": "^24.22.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "rate-limiter-flexible": "^7.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
