feat(scraping): enhance scraping pipeline with external AI integration and timeout handling
add external job filtering API integration for better job post extraction
implement timeout handling for Apify scraping runs
update environment variables for scraping configuration
improve error handling and logging throughout the pipeline

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,21 @@ LOG_FILE=logs/app.log
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
+# Apify Configuration
+APIFY_API_TOKEN=your-apify-api-token-here
+APIFY_ACTOR_ID=apify~facebook-groups-scraper
+
+# External Job Filtering API
+EXTERNAL_JOB_FILTER_API_URL=https://your-external-api-url.com
+EXTERNAL_JOB_FILTER_ENDPOINT=/api/extract_job_posts
+
+# Cron/Scheduler Configuration
+CRON_SECRET_KEY=your-secret-cron-key-change-in-production
+AUTO_SCRAPING_ENABLED=true
+AUTO_SCRAPING_FREQUENCY=thrice_daily
+AUTO_SCRAPING_SCHEDULE="0 9,15,21 * * *"
+AUTO_SCRAPING_MAX_POSTS=30
+
 # Browser Configuration
 PUPPETEER_HEADLESS=true
 BROWSER_TIMEOUT=30000
