--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "send-hourly": "node ./scripts/send-hourly-email.js"
+    "send-hourly": "node ./scripts/send-hourly-email.js",
+    "scrape-websites-daily": "node ./scripts/daily-website-scraper.js"
   },
   "dependencies": {
     "@types/cheerio": "^0.22.35",
