--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/cheerio": "^0.22.35",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@types/uuid": "^10.0.0",
     "cheerio": "^1.1.2",
     "dotenv": "^17.2.2",
@@ -24,6 +25,7 @@
     "rate-limiter-flexible": "^7.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "swagger-jsdoc": "^6.2.8",
     "uuid": "^13.0.0",
     "winston": "^3.17.0"
   },
