chore(env): add Ultravox API key and update package dependencies
- Added ULTRAVOX_API_KEY to the environment configuration for integration with the Ultravox API.
- Updated package.json and package-lock.json to include new dependencies: pdf-poppler and ultravox-client, along with their respective type definitions.
- Enhanced type definitions in the environment configuration to accommodate the new Ultravox API key.

--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "mongoose": "^8.18.2",
     "next": "15.5.3",
     "nodemailer": "7.0.6",
+    "pdf-poppler": "^0.2.1",
     "puppeteer": "^24.22.0",
     "puppeteer-extra": "^3.3.6",
     "rate-limiter-flexible": "^7.3.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "ultravox-client": "^0.4.1",
     "uuid": "^13.0.0",
     "winston": "^3.17.0"
   },
@@ -32,6 +34,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.17",
     "@types/nodemailer": "^7.0.1",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
